# oneconnect-python

./: .gitignore  LICENSE  README.md  oneconnect-gui-autostart.desktop  oneconnect_cli.py  pyproject.toml
src/oneconnect_core/: __init__.py  avcheck.py  clavister.py  cli.py  config.py  configauthxml.py  envinfo.py  networkmanager.py  oidc.py  openconnect_runner.py  profiles.py  runner.py
src/oneconnect_gui/: __init__.py  app.py
